--- a/assets/bootstrap/css/style.css
+++ b/assets/bootstrap/css/style.css
@@ -593,7 +593,7 @@ input[type="radio"] .styled:checked + label::after {
 {
 
   .fb-profile-text>h1{
-    font-weight: 700;
+    font-weight: 700;asdasdad
     font-size:16px;
   }
 
